Update all fixes

--- a/components/navbar8.html
+++ b/components/navbar8.html
@@ -60,14 +60,14 @@
         <header data-thq="thq-navbar" class="navbar8-navbar-interactive">
           <div data-thq="thq-navbar-nav" class="navbar8-desktop-menu">
             <nav class="navbar8-links1">
-              <a href="https://www.teleporthq.io">
+              <a href="mosababoidrees.github.io">
                 <fragment class="navbar8-fragment16">
                   <span class="navbar8-text16 thq-link thq-body-small">
                     Home
                   </span>
                 </fragment>
               </a>
-              <a href="https://www.teleporthq.io">
+              <a href="mosababoidrees.github.io">
                 <fragment class="navbar8-fragment15">
                   <span class="navbar8-text15 thq-link thq-body-small">
                     About
@@ -144,7 +144,7 @@
                     </div>
                   </div>
                   <div class="navbar8-container4">
-                    <a href="https://www.teleporthq.io">
+                    <a href="mosababoidrees.github.io">
                       <div class="navbar8-menu-item1">
                         <img
                           alt="Image for Home"
@@ -170,7 +170,7 @@
                         </div>
                       </div>
                     </a>
-                    <a href="https://www.teleporthq.io">
+                    <a href="mosababoidrees.github.io">
                       <div class="navbar8-menu-item2">
                         <img
                           alt="Image for About"
@@ -195,7 +195,7 @@
                         </div>
                       </div>
                     </a>
-                    <a href="https://www.teleporthq.io">
+                    <a href="mosababoidrees.github.io">
                       <div class="navbar8-menu-item3">
                         <img
                           alt="Image for Portfolio"
@@ -216,7 +216,7 @@
                         </div>
                       </div>
                     </a>
-                    <a href="https://www.teleporthq.io">
+                    <a href="mosababoidrees.github.io">
                       <div class="navbar8-menu-item4">
                         <img
                           alt="Image for Contact"
